=== Version 0.5.5
* Enhancements
  * Added ability to find Checkbox by :value
  * Added ability to find HiddenField by :value
  * Added #fire_event method to Element

=== Version 0.5.4 / 2011-12-18
* Enhancements
  * Added deprecation warning to the method_missing method on Element.  This ability will be removed in 0.6
  * Added full support for file_field element
  * Added ability to find TextField by :title
  * Added ability to find Form by :action
  * Added ability to find Image by :alt
  * Added ability to find Image by :src

=== Version 0.5.3 / 2011-12-11
* Enhancements
  * Added new module PagePopulator with single method populate_page_with
  * Updated to use selenium-webdriver 2.15.0
  * Updated to use watir-webdriver 0.4.1
* Fixes
  * Updated prompt method to make it compatible with latest dependencies

=== Version 0.5.2 / 2011-11-30
* Enhancements
  * Added ability to find image buttons by src
  * Added ability to find image button by alt
  * Added first_row and last_row methods to Table
  * Updated to use selenium-webdriver 2.14.0
  * Updated to use watir-webdriver 0.3.9

=== Version 0.5.1 / 2011-11-18
* Enhancements
  * Added instance level in_frame method
  * Support for nesting all *_element instance methods inside in_frame call
  * Support for nesting alerts inside an in_frame call
  * Support for nesting confirms inside an in_frame call
  * Support for nesting prompts inside an in_frame call

=== Version 0.5 / 2011-11-06
* Enhancements
  * Validated support for JRuby
  * Removed dependency on Mixology
  * Updated to use selenium-webdriver 2.10.0
  * Updated to use watir-webdriver 0.3.8

=== Version 0.4.4 / 2011-10-26
* Enhancements
  * Can now find Radio buttons by value
  * Updated to use selenium-webdriver 2.9.1
* Fixes
  * Properly change context back to top level after interaction inside a frame with Watir

=== Version 0.4.3 / 2011-10-07
* Enhancements