@@ -31,9 +31,9 @@ module PageObject
     #
     def populate_page_with(data)
       data.each do |key, value|
-        populate_checkbox(key, value) if is_checkbox?(key)
-        populate_radiobutton(key, value) if is_radiobutton?(key)
-        populate_text(key, value) if is_text?(key)
+        populate_checkbox(key, value) if is_checkbox?(key) and is_enabled?(key)
+        populate_radiobutton(key, value) if is_radiobutton?(key) and is_enabled?(key)
+        populate_text(key, value) if is_text?(key) and is_enabled?(key)
       end
     end
 
@@ -63,6 +63,10 @@ module PageObject
 
     def is_radiobutton?(key)
       respond_to?("select_#{key}".to_sym)
+    end
+
+    def is_enabled?(key)
+      self.send("#{key}_element").enabled?
     end
   end
 end
